2010-05-11  Ramon Novoa  <rnovoa@artica.es>

	* operation/agentes/stat_win.php: Pass the start date to min, max and
          avg functions.

        * godmode/alerts/configure_alert_action.php: Fixed a typo.

2010-05-11 Raúl Mateos <raulofpandora@gmail.com>

	* godmode/gis_maps/configure_gis_map.php: Updated year. Clean code.

2010-05-11  Sergio Martin <sergio.martin@artica.es>

	* godmode/setup/gis_step_2.php: Fixed the creation
	of connection map in GIS maps for bug 3000031

2010-05-11 Raúl Mateos <raulofpandora@gmail.com>

	* godmode/reporting/map_builder.php: Fixed a typo.

	* godmode/gis_maps/index.php: Updated year. Show text if no map defined.

2010-05-11  Sergio Martin <sergio.martin@artica.es>

	* godmode/gis_maps/index.php: Fixed the change
	of default map for bug: 2993745

2010-05-11  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_cascade_protection.php: Fixed a typo.

2010-05-11  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_cascade_protection.php: Updated a help file
	to reflect recursive cascade protection.

2010-05-10  Ramon Novoa  <rnovoa@artica.es>

	* include/help/en/help_cascade_protection.php,
	  include/help/es/help_cascade_protection.php,
	  images/help/cascade_protection_ilustration.png: Updated
	  help files to reflect recursive cascade protection.

2010-05-10 Sergio Martin  <sergio.martin@artica.es>

	* godmode/db/db_refine.php: Fixed the pendingdelete
	word showed in database purge for bug: 2922769

2010-05-10  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Fixed a typo in grafico_modulo_boolean.
          Fixed the alert and event scale. Removed the 'last' element
          from the chart data array (does not seem to be used anywhere).

2010-05-10 Sergio Martin  <sergio.martin@artica.es>

	* operation/messages/message.php: Fixed the messages
	over the header for bug: 2993495

2010-05-10 Sergio Martin  <sergio.martin@artica.es>

	* godmode/agentes/massive_edit_modules.php: Fixed the